# HaqqUnspent

./: .gitignore
haqq_discord_bot/application/application/: rustfmt.toml  (+1 more)
haqq_discord_bot/application/application/source/: Cargo.toml
haqq_discord_bot/application/application/source/source/: mod.rs
haqq_discord_bot/application/application/source/source/application_layer/data/: unified_report.rs
haqq_discord_bot/application/application/source/source/application_layer/functionality/action_processor/: health_check.rs  mod.rs  route_not_found.rs
haqq_discord_bot/application/application/source/source/application_layer/functionality/command_processor/: mod.rs  run_bot.rs
haqq_discord_bot/application/application/source/source/domain_layer/data/entity/: address_verification_data.rs  aislm_stake.rs  discord_user_role.rs  mod.rs  prize_transfer_proof.rs  raffle.rs  raffle_participant.rs  raffle_winner.rs  recipient_hd_wallet.rs  sender_hd_wallet.rs  verified_address_blacklist.rs  verified_bech32_address.rs
haqq_discord_bot/application/application/source/source/domain_layer/functionality/service/: mod.rs
haqq_discord_bot/application/application/source/source/infrastructure_layer/data/: control_type.rs  error.rs  invalid_argument.rs  invalid_argument_result.rs  mod.rs  void.rs
haqq_discord_bot/application/application/source/source/infrastructure_layer/data/environment_configuration/: environment_configuration_file.rs  mod.rs
haqq_discord_bot/application/application/source/source/infrastructure_layer/functionality/service/: mod.rs
haqq_discord_bot/application/application/source/source/presentation_layer/data/action_route/: matching.rs  mod.rs
haqq_discord_bot/application/application/source/source/presentation_layer/functionality/action/: health_check.rs  mod.rs  route_not_found.rs
unspent_data_generator/application/application/: Cargo.toml  readme.md  rustfmt.toml
unspent_data_generator/application/application/environment_configuration/: environment.example.toml
unspent_data_generator/application/application/source/: Cargo.toml
unspent_data_generator/application/application/source/source/application_layer/data/: unified_report.rs
unspent_data_generator/application/application/source/source/application_layer/functionality/action_processor/: health_check.rs  mod.rs
unspent_data_generator/application/application/source/source/application_layer/functionality/command_processor/: mod.rs  run_all_tasks.rs
unspent_data_generator/application/application/source/source/domain_layer/data/entity/: _remote.rs  aggregated_balance_snapshot.rs  asset.rs  asset_snapshot.rs  base_balance_snapshot.rs  mod.rs
unspent_data_generator/application/application/source/source/infrastructure_layer/: macro_rules.rs  mod.rs
unspent_data_generator/application/application/source/source/infrastructure_layer/data/: auditor.rs  backtrace.rs  control_type.rs  error.rs  invalid_argument_result.rs  mod.rs  void.rs
unspent_data_generator/application/application/source/source/infrastructure_layer/data/environment_configuration/: environment_configuration_file.rs  mod.rs
unspent_data_generator/application/application/source/source/infrastructure_layer/functionality/service/: converter.rs  mod.rs  regular_expression_applicator.rs
unspent_data_generator/application/application/source/source/presentation_layer/data/action_route/: matching.rs  mod.rs
unspent_data_generator/application/application/source/source/presentation_layer/functionality/action/: health_check.rs  mod.rs  route_not_found.rs
unspent_data_proxy/application/application/: Cargo.toml  api_description.md  readme.md
unspent_data_proxy/application/application/environment_configuration/: environment.example.toml
unspent_data_proxy/application/application/source/: Cargo.toml  build.rs
unspent_data_proxy/application/application/source/forced_crate/: Cargo.toml  mod.rs
unspent_data_proxy/application/application/source/forced_crate/build_script_constant/: mod.rs
unspent_data_proxy/application/application/source/forced_crate/environment_configuration/: mod.rs
unspent_data_proxy/application/application/source/source/application_layer/data/: unified_report.rs
unspent_data_proxy/application/application/source/source/application_layer/functionality/action_processor/: cors_preflight_request.rs  health_check_1.rs  health_check_2.rs  mod.rs  route_not_found.rs
unspent_data_proxy/application/application/source/source/application_layer/functionality/command_processor/: create_fixtures.rs  run_server.rs
unspent_data_proxy/application/application/source/source/application_layer/functionality/service/: mod.rs
unspent_data_proxy/application/application/source/source/domain_layer/data/: mod.rs
unspent_data_proxy/application/application/source/source/domain_layer/data/common_type/: mod.rs
unspent_data_proxy/application/application/source/source/domain_layer/data/entity/: _remote.rs  asset_snapshot.rs  asset_snapshot_for_120_days.rs  asset_snapshot_for_30_days.rs  asset_snapshot_for_366_days.rs  asset_snapshot_for_7_days.rs  asset_snapshot_for_over_366_days.rs  balance_snapshot.rs  balance_snapshot_for_120_days.rs  balance_snapshot_for_30_days.rs  balance_snapshot_for_366_days.rs  balance_snapshot_for_7_days.rs  balance_snapshot_for_over_366_days.rs  base_balance_snapshot.rs  mod.rs  subportfolio.rs  subportfolio_asset.rs  subportfolio_base_balance_snapshot.rs  subportfolio_base_balance_snapshot_for_120_days.rs  subportfolio_base_balance_snapshot_for_30_days.rs  subportfolio_base_balance_snapshot_for_366_days.rs  subportfolio_base_balance_snapshot_for_7_days.rs  subportfolio_base_balance_snapshot_for_over_366_days.rs  subportfolio_link.rs  subportfolio_trackable_wallet.rs
unspent_data_proxy/application/application/source/source/domain_layer/functionality/service/: mod.rs
unspent_data_proxy/application/application/source/source/infrastructure_layer/data/: control_type.rs  error.rs  serialization_layer.rs  void.rs
unspent_data_proxy/application/application/source/source/infrastructure_layer/macro_rules/: mod.rs
(+360 files in other folders)
