[workspace]
resolver = "2"
members = [
    "./source",
    "./source/source/presentation_layer/functionality/command/core",
]
default-members = [
    "./source",
    "./source/source/presentation_layer/functionality/command/core",
]

[workspace.package]
authors = ["Haqq"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false

[profile.release.build-override]
opt-level = 3
codegen-units = 16