[workspace]
resolver = "2"
members = [
    "./source",
    "./source/forced_crate",
    "./source/forced_crate/build_script_constant",
    "./source/forced_crate/environment_configuration",
    "./source/source/presentation_layer/functionality/command/core",
    "./source/source/presentation_layer/functionality/command/migrate_asset_snapshot",
    "./source/source/presentation_layer/functionality/command/migrate_balance_snapshot"
]
default-members = [
    "./source",
    "./source/forced_crate",
    "./source/forced_crate/build_script_constant",
    "./source/forced_crate/environment_configuration",
    "./source/source/presentation_layer/functionality/command/core",
    "./source/source/presentation_layer/functionality/command/migrate_asset_snapshot",
    "./source/source/presentation_layer/functionality/command/migrate_balance_snapshot"
]

[workspace.package]
authors = ["Haqq"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false

[profile.release.build-override]
opt-level = 3
codegen-units = 16