[package]
name = "application"
version = "0.1.0"
authors.workspace = true
edition = "2021"

[lib]
name = "application"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
bytes = { package = "bytes", version = "1.4.0", default-features = true, features = [], optional = false }
chrono = { package = "chrono", version = "0.4.26", default-features = true, features = [], optional = false }
cron = { package = "cron", version = "0.12.0", default-features = true, features = [], optional = false }
http = { package = "http", version = "0.2.9", default-features = true, features = [], optional = false }
hyper = { package = "hyper", version = "0.14.27", default-features = true, features = ["full"], optional = false }
matchit = { package = "matchit", version = "0.7.0", default-features = true, features = [], optional = false }
regex = { package = "regex", version = "1.10.2", default-features = true, features = [], optional = false }
reqwest = { package = "reqwest", version = "0.11.23", default-features = true, features = [], optional = false }
rust_decimal = { package = "rust_decimal", version = "1.35.0", default-features = true, features = [], optional = false }
serde = { package = "serde", version = "1.0.183", default-features = true, features = ["derive"], optional = false }
serde_json = { package = "serde_json", version = "1.0.105", default-features = true, features = [], optional = false }
tokio = { package = "tokio", version = "1.32.0", default-features = true, features = ["full"], optional = false }
tokio_postgres = { package = "tokio-postgres", version = "0.7.10", default-features = true, features = [], optional = false }
toml = { package = "toml", version = "0.7.4", default-features = true, features = [], optional = false }
tracing = { package = "tracing", version = "0.1.40", default-features = true, features = [], optional = false }
tracing-appender = { package = "tracing-appender", version = "0.2.2", default-features = true, features = [], optional = false }
tracing-subscriber = { package = "tracing-subscriber", version = "0.3.17", default-features = true, features = [], optional = false }

[features]
default = []
logger_level_trace = []
file_log  = []
manual_testing = [
    "logger_level_trace",
    "file_log"
]